# lead-enrichment-eval

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  eval-pr.yml  eval.yml
data/: adversarial_specs.jsonl  edge_specs.jsonl  exemplars.json  staging.jsonl  staging_with_gold.jsonl  synthesis_specs.jsonl
data/eval_runs/: 20260512T172523Z-rescored.json  20260513T144616Z-prefix.json  20260513T174653Z-postfix.json  20260514T130110Z-canonical.json  README.md  anchor_baseline.json  anchor_items.txt  annotations.json  chat_latency_remeasure.json  latest.json
migrations/: 0001_init.sql  0002_eval_set_kind.sql  0003_snapshot_served.sql
scripts/: check_anchor_baseline.py  generate_adversarial.py  generate_edge.py  generate_synthetic.py  migrate_adversarial_checks.py  patch_chat_latency.py  promote_gold.py  regenerate_exemplar_snapshots.py  remeasure_chat_latency.py  scaffold_gold.py
services/: app.py  chat.py  config.py  db.py  embeddings.py  enrich.py  eval_seed.py  prompts.py  ratelimit.py  scoring.py  snapshots.py  telemetry.py  validation.py  web.py
services/eval/: __init__.py  dataset.py  (+6 more)
tests/: test_chat.py  test_dataset_integrity.py  test_enrich.py  test_eval_dataset.py  test_eval_extractor.py  test_eval_inference.py  test_eval_judges.py  test_eval_metrics.py  test_eval_runner.py  test_ratelimit.py  test_scoring.py  test_snapshots.py  test_telemetry.py  test_validation.py  test_web.py
web/: instrumentation-client.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
(+56 files in other folders)
